-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.15
-
b7b17e719ea57f2d697bc0f61bffaa0fab910701 (qt/qtbase/dev) 1356f0c2c3c29cb5a5a676de23f3d582c140bc8c (qt/qtbase/5.15)
Coverity reports in CID 218601 that TreeNode::splitLeft is uninitialized in TreeNodes where the TreeNode::leaf member is set to true.
This is intentional; the splitLeft/Right data members are only ever used when the TreeNode is not a leaf. However, passing around uninitialized data members easily results in undefined behavior and hides bugs.
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTBUG-84160 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 299934,4 | Fix coverity warnings about uninitialized data members | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 301009,2 | Fix coverity warnings about uninitialized data members | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |